--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body onload="init()">
     <h1>Penguin Slap</h1>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="1280px" height="720px"></canvas>
 </body>
 </html>
