added class MovableObject with basic structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <title>Penguin Slap</title>
 
+    <script src="classes/movable-object.class.js"></script>
     <script src="scripts/game.js"></script>
 </head>
 <body onload="init()">
