added class World with basic structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Penguin Slap</title>
 
     <script src="classes/movable-object.class.js"></script>
+    <script src="classes/character.class.js"></script>
+    <script src="classes/enemy.class.js"></script>
+    <script src="classes/world.class.js"></script>
     <script src="scripts/game.js"></script>
 </head>
 <body onload="init()">
