added background classes with basic structure

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <script src="classes/movable-object.class.js"></script>
     <script src="classes/character.class.js"></script>
     <script src="classes/enemy.class.js"></script>
+    <script src="classes/static-background.class.js"></script>
+    <script src="classes/staticBackgroundObject.class.js"></script>
+    <script src="classes/moving-background.class.js"></script>
+    <script src="classes/moon.class.js"></script>
     <script src="classes/world.class.js"></script>
     <script src="scripts/game.js"></script>
 </head>
