--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <script src="classes/movable-object.class.js"></script>
     <script src="classes/character.class.js"></script>
     <script src="classes/enemy.class.js"></script>
-    <script src="classes/static-background.class.js"></script>
-    <script src="classes/staticBackgroundObject.class.js"></script>
-    <script src="classes/moving-background.class.js"></script>
-    <script src="classes/moon.class.js"></script>
+    <script src="classes/background.class.js"></script>
+    <script src="classes/background-object.class.js"></script>
+    <script src="classes/moving-background-object.class.js"></script>
     <script src="classes/world.class.js"></script>
     <script src="scripts/game.js"></script>
 </head>
