added function to load imgs into imgCache

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="classes/character.class.js"></script>
     <script src="classes/enemy.class.js"></script>
     <script src="classes/background.class.js"></script>
+    <script src="classes/moon.class.js"></script>
     <script src="classes/background-object.class.js"></script>
     <script src="classes/moving-background-object.class.js"></script>
     <script src="classes/world.class.js"></script>
