added basic walking animation and logic+

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="classes/moving-background-object.class.js"></script>
      <script src="classes/moon.class.js"></script>
     <script src="classes/world.class.js"></script>
+    <script src="classes/keyboard.class.js"></script>
     <script src="scripts/game.js"></script>
 </head>
 <body onload="init()">
