--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script src="classes/moon.class.js"></script>
     <script src="classes/world.class.js"></script>
     <script src="classes/keyboard.class.js"></script>
+    <script src="classes/level.class.js"></script>
+    <script src="levels/level1.js"></script>
     <script src="scripts/game.js"></script>
 </head>
 <body onload="init()">
