--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 
     <title>Penguin Slap</title>
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 
     <script src="classes/movable-object.class.js"></script>
     <script src="classes/character.class.js"></script>
