--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <title>Penguin Slap</title>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 
-    <script src="classes/movable-object.class.js"></script>
-    <script src="classes/character.class.js"></script>
-    <script src="classes/enemy.class.js"></script>
     <script src="classes/background.class.js"></script>
     <script src="classes/background-object.class.js"></script>
     <script src="classes/moving-background-object.class.js"></script>
     <script src="classes/moon.class.js"></script>
+    <script src="classes/foreground.class.js"></script>
+    <script src="classes/statusbar.class.js"></script>
+    <script src="classes/movable-object.class.js"></script>
+    <script src="classes/character.class.js"></script>
+    <script src="classes/enemy.class.js"></script>
     <script src="classes/world.class.js"></script>
     <script src="classes/keyboard.class.js"></script>
     <script src="classes/level.class.js"></script>
