--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="classes/foreground.class.js"></script>
     <script src="classes/statusbar.class.js"></script>
     <script src="classes/movable-object.class.js"></script>
+    <script src="classes/throwable-object.class.js"></script>
     <script src="classes/character.class.js"></script>
     <script src="classes/enemy.class.js"></script>
     <script src="classes/world.class.js"></script>
