--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <script src="classes/throwable-object.class.js"></script>
     <script src="classes/character.class.js"></script>
     <script src="classes/enemy.class.js"></script>
+    <script src="classes/ground-object.class.js"></script>
+    <script src="classes/candy.class.js"></script>
+    <script src="classes/coin.class.js"></script>
     <script src="classes/world.class.js"></script>
     <script src="classes/keyboard.class.js"></script>
     <script src="classes/level.class.js"></script>
