--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <script src="classes/moon.class.js"></script>
     <script src="classes/foreground.class.js"></script>
     <script src="classes/statusbar.class.js"></script>
+    <script src="classes/counter.class.js"></script>
+    <script src="classes/coin-counter.class.js"></script>
+    <script src="classes/candy-counter.class.js"></script>
     <script src="classes/movable-object.class.js"></script>
     <script src="classes/throwable-object.class.js"></script>
     <script src="classes/character.class.js"></script>
