restructuring with the use of import/export of classes

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <title>Penguin Slap</title>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-
-    <script src="classes/background.class.js"></script>
+    
+    <!-- <script src="classes/background.class.js"></script>
     <script src="classes/background-object.class.js"></script>
     <script src="classes/moving-background-object.class.js"></script>
     <script src="classes/moon.class.js"></script>
@@ -31,9 +31,11 @@
     <script src="classes/level.class.js"></script>
     <script src="classes/endboss.class.js"></script>
     <script src="levels/level1.js"></script>
-    <script src="scripts/game.js"></script>
+    <script src="scripts/game.js"></script> -->
+    <script type="module" src="scripts/game.js"></script>
 </head>
-<body onload="init()">
+<!-- <body onload="init()"> -->
+<body>
     <h1>Penguin Slap</h1>
     <canvas id="canvas" width="1280px" height="720px"></canvas>
 </body>
