--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles/font.css">
 
-    <title>Penguin Slap</title>
+    <title>Super Candy Penguin</title>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     
     <script type="module" src="scripts/game.js"></script>
 </head>
 <body>
-    <h1>Penguin Slap</h1>
+    <div id="overlays">
+        <div id="start-screen" class="d-none"></div>
+        <div id="controls" class="d-none"></div>
+        <div id="settings" class="d-none"></div>
+        <div id="end-screen" class="d-none"></div>
+    </div>
+    <h1>Super Candy Penguin</h1>
     <canvas id="canvas" width="1280px" height="720px"></canvas>
 </body>
 </html>
