--- a/index.html
+++ b/index.html
@@ -15,16 +15,13 @@
 <body>
     <div id="overlays">
         <div id="start-screen" class="overlay-screen">
-            <!-- <div id="container-audio-controls">
-                <button class="menu-button-sm" id="button-sound-off"></button>
-                <button class="menu-button-sm" id="button-music-off"></button>
-            </div> -->
             <div id="container-buttons">
                 <button class="menu-button" id="button-play">PLAY</button>
                 <button class="menu-button" id="button-settings">SETTINGS</button>
+                <button class="menu-button-sm" id="button-controls"></button>
             </div>
         </div>
-        <div id="controlls" class="overlay-screen d-none"></div>
+        <div id="controls" class="overlay-screen d-none"></div>
         <div id="settings" class="overlay-screen d-none"></div>
         <div id="end-screen" class="overlay-screen d-none"></div>
     </div>
