added animated penguin via spritesheet and css animation

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <button class="menu-button" id="button-settings">SETTINGS</button>
                 <button class="menu-button-sm" id="button-controls"></button>
             </div>
+            <div id="penguin-animated"></div>
+            <div id="lettering"></div>
         </div>
         <div id="controls" class="overlay-screen d-none"></div>
         <div id="settings" class="overlay-screen d-none"></div>
