--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <div id="overlays">
         <div id="start-screen" class="overlay-screen">
             <div id="container-buttons">
-                <button class="menu-button" id="button-play">PLAY</button>
+                <button class="menu-button" id="button-play" onclick="startGame()">PLAY</button>
                 <button class="menu-button" id="button-settings">SETTINGS</button>
                 <button class="menu-button-sm" id="button-controls"></button>
             </div>
-            <div id="penguin-animated"></div>
+            <div id="penguin-animated" class="penguin-animation-idle"></div>
             <div id="lettering"></div>
         </div>
         <div id="controls" class="overlay-screen d-none"></div>
@@ -30,4 +30,5 @@
     <h1>Super Candy Penguin</h1>
     <canvas id="canvas" width="1280px" height="720px"></canvas>
 </body>
+<script src="script.js"></script>
 </html>
