--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <div id="settings" class="overlay-screen d-none"></div>
         <div id="win-screen" class="overlay-screen end-screen d-none">
             <div id="container-buttons">
-                <button class="menu-button" id="button-play" onclick="restartGame()">PLAY AGAIN</button>
+                <button class="menu-button replay-button" onclick="restartGame()">PLAY AGAIN</button>
                 <button class="menu-button" id="button-menu">MENU</button>
             </div>
         </div>
         <div id="game-over-screen" class="overlay-screen end-screen d-none">
             <div id="container-buttons">
-                <button class="menu-button" id="button-play" onclick="restartGame()">PLAY AGAIN</button>
+                <button class="menu-button replay-button" onclick="restartGame()">PLAY AGAIN</button>
                 <button class="menu-button" id="button-menu">MENU</button>
             </div>
         </div>
