removed gameStarted flag added eventListener to menu- and replay-buttons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="overlays">
-        <div id="start-screen" class="overlay-screen d-none">
+        <div id="start-screen" class="overlay-screen">
             <div id="container-buttons">
                 <button class="menu-button" id="button-play">PLAY</button>
                 <button class="menu-button" id="button-settings">SETTINGS</button>
@@ -28,13 +28,13 @@
         <div id="win-screen" class="overlay-screen end-screen d-none">
             <div id="container-buttons">
                 <button class="menu-button replay-button">PLAY AGAIN</button>
-                <button class="menu-button" id="button-menu">MENU</button>
+                <button class="menu-button start-screen-button">MENU</button>
             </div>
         </div>
         <div id="game-over-screen" class="overlay-screen end-screen d-none">
             <div id="container-buttons">
                 <button class="menu-button replay-button">PLAY AGAIN</button>
-                <button class="menu-button" id="button-menu">MENU</button>
+                <button class="menu-button start-screen-button">MENU</button>
             </div>
         </div>
     </div>
