finished controls page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,34 @@
         </div>
         <div id="controls" class="overlay-screen settings-screen d-none">
             <div id="header-img-controls"></div>
+            <div class="container-keybindings">
+                <div class="keybindings-row">
+                    <div class="row-left">
+                        <div class="binding">Move left</div>
+                        <div class="key key-sm">A</div>
+                        <div class="key key-sm">
+                            <i class="fa-solid fa-arrow-left"></i>
+                        </div>
+                    </div>
+                    <div class="row-right">
+                        <div class="binding">Move right</div>
+                        <div class="key key-sm">D</div>
+                        <div class="key key-sm">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="keybindings-row">
+                    <div class="row-left">
+                        <div class="binding">Jump</div>
+                        <div class="key key-bg">SPACE</div>
+                    </div>
+                    <div class="row-right">
+                        <div class="binding">Throw</div>
+                        <div class="key key-sm">F</div>
+                    </div>
+                </div>
+            </div>
             <button class="menu-button start-screen-button home-button btn-hover">
                 <i class="fa-solid fa-arrow-left"></i>
             </button>
