--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
             <div class="container-volume-controls">
                 <div class="volume-controls">
                     <p>Sound</p>
-                    <button id="sound-down" class="menu-button-xsm btn-hover btn-down"></button>
+                    <button id="sound-down" class="menu-button-xsm btn-hover btn-down sound-control"></button>
                     <button id="sound-volume" class="button-soundbar"></button>
-                    <button id="sound-up" class="menu-button-xsm btn-hover btn-up"></button>
-                    <button id="sound-mute" class="menu-button-sm button-mute btn-hover"></button>
+                    <button id="sound-up" class="menu-button-xsm btn-hover btn-up sound-control"></button>
+                    <button id="sound-mute" class="menu-button-sm button-mute btn-hover sound-control"></button>
                 </div>
                 <div class="volume-controls">
                     <p>Music</p>
-                    <button id="music-down" class="menu-button-xsm btn-hover btn-down"></button>
+                    <button id="music-down" class="menu-button-xsm btn-hover btn-down sound-control"></button>
                     <button id="music-volume" class="button-soundbar"></button>
-                    <button id="music-up" class="menu-button-xsm btn-hover btn-up"></button>
-                    <button id="music-mute" class="menu-button-sm button-mute btn-hover"></button>
+                    <button id="music-up" class="menu-button-xsm btn-hover btn-up sound-control"></button>
+                    <button id="music-mute" class="menu-button-sm button-mute btn-hover sound-control"></button>
                 </div>
             </div>
             <button class="menu-button start-screen-button home-button btn-hover">
