--- a/index.html
+++ b/index.html
@@ -97,4 +97,5 @@
     <canvas id="canvas" width="1280px" height="720px"></canvas>
 </body>
 <script src="script.js"></script>
+<script src="./scripts/volumeControl.js"></script>
 </html>
