finished sound-design and volume logic for start- and settings-page

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div id="overlays">
         <div id="start-screen" class="overlay-screen">
             <div id="container-buttons">
-                <button id="button-play" class="menu-button btn-hover">PLAY</button>
-                <button id="button-settings" class="menu-button btn-hover">SETTINGS</button>
-                <button id="button-controls" class="menu-button-sm btn-hover"></button>
+                <button id="button-play" class="menu-button btn-hover button-clickable">PLAY</button>
+                <button id="button-settings" class="menu-button btn-hover button-clickable">SETTINGS</button>
+                <button id="button-controls" class="menu-button-sm btn-hover button-clickable"></button>
             </div>
             <div id="penguin-animated" class="penguin-animation-idle"></div>
             <div id="lettering"></div>
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </div>
-            <button class="menu-button start-screen-button home-button btn-hover">
+            <button class="menu-button start-screen-button home-button btn-hover button-clickable">
                 <i class="fa-solid fa-arrow-left"></i>
             </button>
         </div>
@@ -76,20 +76,20 @@
                     <button id="music-mute" class="menu-button-sm button-mute btn-hover sound-control"></button>
                 </div>
             </div>
-            <button class="menu-button start-screen-button home-button btn-hover">
+            <button class="menu-button start-screen-button home-button btn-hover button-clickable">
                 <i class="fa-solid fa-arrow-left"></i>
             </button>
         </div>
         <div id="win-screen" class="overlay-screen end-screen d-none">
             <div id="container-buttons">
-                <button class="menu-button replay-button btn-hover">PLAY AGAIN</button>
-                <button class="menu-button start-screen-button btn-hover">MENU</button>
+                <button class="menu-button replay-button btn-hover button-clickable">PLAY AGAIN</button>
+                <button class="menu-button start-screen-button btn-hover button-clickable">MENU</button>
             </div>
         </div>
         <div id="game-over-screen" class="overlay-screen end-screen d-none">
             <div id="container-buttons">
-                <button class="menu-button replay-button btn-hover">PLAY AGAIN</button>
-                <button class="menu-button start-screen-button btn-hover">MENU</button>
+                <button class="menu-button replay-button btn-hover button-clickable">PLAY AGAIN</button>
+                <button class="menu-button start-screen-button btn-hover button-clickable">MENU</button>
             </div>
         </div>
     </div>
