--- a/index.html
+++ b/index.html
@@ -15,7 +15,25 @@
 </head>
 <body>
     <div id="overlays">
-        <div id="start-screen" class="overlay-screen">
+        <div id="mobile-controls" class="overlay-screen">
+            <div id="mobile-controls-left">
+                <div id="mobile-controls-settings">
+                    <div class="mobile-control-button"></div>
+                    <div class="mobile-control-button"></div>
+                </div>
+                <div id="mobile-controls-walking">
+                    <div class="mobile-control-button"></div>
+                    <div class="mobile-control-button"></div>
+                </div>
+            </div>
+            <div id="mobile-controls-right">
+                <div id="mobile-controls-actions">
+                    <div class="mobile-control-button"></div>
+                    <div class="mobile-control-button"></div>
+                </div>
+            </div>
+        </div>
+        <div id="start-screen" class="overlay-screen d-none">
             <div class="container-buttons">
                 <button id="button-play" class="menu-button btn-hover button-clickable">PLAY</button>
                 <button id="button-settings" class="menu-button btn-hover button-clickable">SETTINGS</button>
