added mobile control buttons

--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
         <div id="mobile-controls" class="overlay-screen">
             <div id="mobile-controls-left">
                 <div id="mobile-controls-settings">
-                    <div class="mobile-control-button"></div>
-                    <div class="mobile-control-button"></div>
+                    <div id="mobile-sound-mute" class="mobile-control-button"></div>
+                    <div id="mobile-music-mute" class="mobile-control-button"></div>
                 </div>
                 <div id="mobile-controls-walking">
-                    <div class="mobile-control-button"></div>
-                    <div class="mobile-control-button"></div>
+                    <div id="walk-left" class="mobile-control-button"></div>
+                    <div id="walk-right" class="mobile-control-button"></div>
                 </div>
             </div>
             <div id="mobile-controls-right">
                 <div id="mobile-controls-actions">
-                    <div class="mobile-control-button"></div>
-                    <div class="mobile-control-button"></div>
+                    <div id="jump" class="mobile-control-button"></div>
+                    <div id="throw" class="mobile-control-button"></div>
                 </div>
             </div>
         </div>
