--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/250eb2fe9b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id="overlays">
+    <div id="overlays" width="1280px" height="720px">
         <div id="mobile-controls" class="overlay-screen d-none">
             <div id="mobile-controls-left">
                 <div id="mobile-controls-settings">
