started with responsive design of the settings page

--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
                     </div>
                 </div>
             </div>
-            <button class="menu-button start-screen-button home-button btn-hover button-clickable">
-                <i class="fa-solid fa-arrow-left"></i>
-            </button>
+            <div class="container-home-button">
+                <button class="menu-button start-screen-button home-button btn-hover button-clickable">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </button>
+            </div>
         </div>
         <div id="settings" class="overlay-screen settings-screen d-none">
             <div id="header-img-settings"></div>
@@ -94,9 +96,11 @@
                     <button id="music-mute" class="menu-button-sm button-mute btn-hover sound-control"></button>
                 </div>
             </div>
-            <button class="menu-button start-screen-button home-button btn-hover button-clickable">
-                <i class="fa-solid fa-arrow-left"></i>
-            </button>
+            <div class="container-home-button">
+                <button class="menu-button start-screen-button home-button btn-hover button-clickable">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </button>
+            </div>
         </div>
         <div id="win-screen" class="overlay-screen end-screen d-none">
             <div class="container-buttons">
