finished responsive design of settings page

--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
                     <button id="sound-down" class="menu-button-xsm btn-hover btn-down sound-control"></button>
                     <button id="sound-volume" class="button-soundbar"></button>
                     <button id="sound-up" class="menu-button-xsm btn-hover btn-up sound-control"></button>
-                    <button id="sound-mute" class="menu-button-sm button-mute btn-hover sound-control"></button>
+                    <button id="sound-mute" class="button-mute btn-hover sound-control"></button>
                 </div>
                 <div class="volume-controls">
                     <p>Music</p>
                     <button id="music-down" class="menu-button-xsm btn-hover btn-down sound-control"></button>
                     <button id="music-volume" class="button-soundbar"></button>
                     <button id="music-up" class="menu-button-xsm btn-hover btn-up sound-control"></button>
-                    <button id="music-mute" class="menu-button-sm button-mute btn-hover sound-control"></button>
+                    <button id="music-mute" class="button-mute btn-hover sound-control"></button>
                 </div>
             </div>
             <div class="container-home-button">
