--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
 </head>
 <body>
     <div id="overlays">
-        <div id="mobile-controls" class="overlay-screen d-none">
+        <div id="mobile-controls" class="overlay-screen">
             <div id="mobile-controls-left">
-                <div id="mobile-controls-settings">
-                    <div id="mobile-sound-mute" class="mobile-control-button"></div>
-                    <div id="mobile-music-mute" class="mobile-control-button"></div>
-                </div>
                 <div id="mobile-controls-walking">
                     <div id="walk-left" class="mobile-control-button"></div>
                     <div id="walk-right" class="mobile-control-button"></div>
@@ -33,7 +29,7 @@
                 </div>
             </div>
         </div>
-        <div id="start-screen" class="overlay-screen">
+        <div id="start-screen" class="overlay-screen d-none">
             <div class="container-buttons">
                 <button id="button-play" class="menu-button btn-hover button-clickable">PLAY</button>
                 <button id="button-settings" class="menu-button btn-hover button-clickable">SETTINGS</button>
