--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <script src="https://kit.fontawesome.com/250eb2fe9b.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="overlay-landscape-spinner">
+        <span class="landscape-spinner"><span class="spinner-ring"></span></span>
+    </div>
     <div id="overlays">
         <div id="mobile-controls" class="overlay-screen d-none">
             <div id="mobile-controls-left">
