fixed bahaviour of the canvas height/width ratio on devices wiht small widths and large heights

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <script src="https://kit.fontawesome.com/250eb2fe9b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="overlay-landscape-spinner">
-        <span class="landscape-spinner"><span class="spinner-ring"></span></span>
+    <div class="overlay-portrait-spinner">
+        <span class="portrait-spinner"><span class="spinner-ring"></span></span>
     </div>
     <div id="overlays">
         <div id="mobile-controls" class="overlay-screen d-none">
