finished JSDoc added imprint button on start page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             <div class="container-buttons">
                 <button id="button-play" class="menu-button btn-hover button-clickable">PLAY</button>
                 <button id="button-settings" class="menu-button btn-hover button-clickable">SETTINGS</button>
-                <button id="button-controls" class="menu-button-sm btn-hover button-clickable"></button>
+                <div id="last-row">
+                    <button id="button-imprint" class="menu-button-half btn-hover button-clickable">IMPRINT</button>
+                    <button id="button-controls" class="menu-button-sm btn-hover button-clickable"></button>
+                </div>
             </div>
             <div id="penguin-animated" class="penguin-animation-idle"></div>
             <div id="lettering"></div>
