--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div id="start-screen" class="overlay-screen">
+        <div id="start-screen" class="overlay-screen d-none">
             <div class="container-buttons">
                 <button id="button-play" class="menu-button btn-hover button-clickable">PLAY</button>
                 <button id="button-settings" class="menu-button btn-hover button-clickable">SETTINGS</button>
@@ -96,6 +96,41 @@
                     <button id="music-volume" class="button-soundbar"></button>
                     <button id="music-up" class="menu-button-xsm btn-hover btn-up sound-control"></button>
                     <button id="music-mute" class="button-mute btn-hover sound-control"></button>
+                </div>
+            </div>
+            <div class="container-home-button">
+                <button class="menu-button start-screen-button home-button btn-hover button-clickable">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </button>
+            </div>
+        </div>
+        <div id="imprint" class="overlay-screen">
+            <div id="header-img-imprint"></div>
+            <div class="container-imprint">
+                <div class="imprint-first-row">
+                    <div>
+                        <h3>Imprint</h3>
+                        <p>Dominik Tröndle<br>Munich 81735<br>Germany</p>
+                        <p>Email: <a href="mailto:domi.troendle@gmail.com">domi.troendle@gmail.com</a></p>
+                    </div>
+                    <div>
+                        <h3>Credits</h2>
+                        <ul>
+                            <li>Sprites: <a href="https://craftpix.net" target="_blank">Craftpix</a></li>
+                            <li>Music: <a href="https://freesound.org" target="_blank">Freesound</a></li>
+                            <li>Sound effects: <a href="https://zapsplat.com" target="_blank">Zapsplat</a></li>
+                            <li>Font: <a href="https://fonts.google.com/" target="_blank">Google Fonts</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <h3>Privacy Policy</h2>
+                    <p>This game does not collect or store any personal data.</p>
+                </div>
+                <div>
+                    <h3>Disclaimer</h2>
+                    <p>Despite careful content control, we assume no liability for the content of external links.<br>The operators of the linked pages are solely responsible for their content.
+                    </p>
                 </div>
             </div>
             <div class="container-home-button">
