added shadows to mobile control buttons to signal button presses

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                     </div>
                     <div>
                         <h3>Imprint</h3>
-                        <p>Dominik Tröndle<br>Munich 81735<br>Germany</p>
+                        <p>Dominik Tröndle<br>Munich 12345<br>Germany</p>
                         <br>
-                        <p>Email: <br><a href="mailto:domi.troendle@gmail.com">domi.troendle&#8203;@gmail.com</a></p>
+                        <p>Email: <br><a href="mailto:">imprintMail&#8203;@gmail.com</a></p>
                     </div>
                 </div>
                 <div>
