--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <title>Super Candy Penguin</title>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     
-    <script type="module" src="scripts/game.js"></script>
     <script src="https://kit.fontawesome.com/250eb2fe9b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -163,8 +162,9 @@
         </div>
     </div>
     <h1>Super Candy Penguin</h1>
-    <canvas id="canvas" width="1280px" height="720px"></canvas>
+    <canvas id="canvas" width="1280" height="720"></canvas>
 </body>
+<script type="module" src="scripts/game.js"></script>
 <script src="script.js"></script>
 <script src="./scripts/volumeControl.js"></script>
 </html>
