finished logic to mute music and sound in real time ingame

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <div id="overlays">
         <div id="mobile-controls" class="overlay-screen d-none">
             <div id="mobile-controls-left">
+                 <div id="mobile-controls-settings">
+                    <div id="music-mute-mobile" class="mobile-control-button-sm"></div>
+                    <div id="sound-mute-mobile" class="mobile-control-button-sm"></div>
+                </div>
                 <div id="mobile-controls-walking">
                     <div id="walk-left" class="mobile-control-button"></div>
                     <div id="walk-right" class="mobile-control-button"></div>
